# vm-scheduler

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
scripts/: install.sh  uninstall.sh
src/vm_scheduler/: cli.py  config.py  database.py  scheduler.py  virsh.py
systemd/: vm-scheduler-start.service  vm-scheduler-start.timer  vm-scheduler-stop.service  vm-scheduler-stop.timer
